WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48247
TextureMapperGL get the driver info log but do not use it
https://bugs.webkit.org/show_bug.cgi?id=48247
Summary
TextureMapperGL get the driver info log but do not use it
Benjamin Poulain
Reported
2010-10-25 09:01:33 PDT
After compiling the GL programs, the implementation query the info log of the driver with glGetProgramInfoLog(). The result is not used, I think this part is remaining from debug informations used in development.
Attachments
Patch
(1.25 KB, patch)
2010-10-25 09:09 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2010-10-25 09:09:32 PDT
Created
attachment 71758
[details]
Patch
WebKit Commit Bot
Comment 2
2010-10-29 15:01:44 PDT
Comment on
attachment 71758
[details]
Patch Clearing flags on attachment: 71758 Committed
r70933
: <
http://trac.webkit.org/changeset/70933
>
WebKit Commit Bot
Comment 3
2010-10-29 15:01:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug