2010-10-29  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Antonio Gomes.

        TextureMapperGL get the driver info log but do not use it
        https://bugs.webkit.org/show_bug.cgi?id=48247

        Remove the call to glGetProgramInfoLog().

        * platform/graphics/opengl/TextureMapperGL.cpp:
        (WebCore::TexmapShaderInfo::createShaderProgram):

Canonical link: https://commits.webkit.org/61437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70933 268f45cc-cd09-0410-ab3c-d52691b4dbfc